[metadata]
name = pyEventHook
version = 0.0.1
author = Ariel Alfonso Triana Pérez
author_email = usich37@gmail.com
description = A Python event implementation similar to the C# implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArielTriana/pyEventHook
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = False